# proyecto-zidra-autoscore

./: .Dockerignore  README.md  autoscore-stack.yml  docker-compose.yml
Apis/main_bk_service/: .Dockerignore  Dockerfile  README.md  pom.xml
Apis/n8n_service/: Zidra Risk Complete System.json  dockerfile
Apis/receptor_ioti_bk/: Cargo.toml
Apis/receptor_ioti_bk/src/: main.rs
Apis/risk_score/: .Dockerignore  .example.env  .gitignore  Dockerfile  README.md  requirements.txt
Apis/risk_score/data/: X_ready.pkl  dataset_ml_final.parquet  transformer.pkl
Apis/risk_score/files/: historial_metricas.csv
Apis/risk_score/models/: features_v1.json  features_v3.json  model_registry.json  model_v3.pkl  model_v4.pkl
Apis/risk_score/reports/: metrics_v1.json  metrics_v2.json  metrics_v3.json  metrics_v4.json
Aplicaciones/calculadora_crediticia_movil/: README.md  pubspec.yaml
Aplicaciones/calculadora_crediticia_movil/android/: gradle.properties
Aplicaciones/calculadora_crediticia_movil/lib/: main.dart
Aplicaciones/calculadora_crediticia_movil/linux/: CMakeLists.txt
Aplicaciones/calculadora_crediticia_movil/test/: widget_test.dart
Aplicaciones/calculadora_crediticia_movil/web/: index.html  manifest.json
Aplicaciones/calculadora_crediticia_movil/windows/: CMakeLists.txt
Asistente/: Lucy_asistente.fbx  mi_avatar_asistente.glb  mi_avatar_asistente_fbx.fbx
IoTI/broker_mosquito/: README.md  crear_usuarios_manuales.txt  docker-compose.yml  mosquitto.conf
IoTI/ioti_artefactos_gps/: diagram.json  platformio.ini
postgres-init/: create_databases.sql
(+110 files in other folders)
